[package]
name = "hello-daisy"
authors = ["Komplementariteten <47053492+Komplementariteten@users.norepley.github.com>"]
edition = "2018"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]


[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = ["device"] }
daisy_bsp = { version = "0.5.1", features = ["seed"]  }
embedded-graphics = "0.8.0"
embedded-graphics-core = { version = "0.4.0", optional = true }
stm32h7xx-hal = { version = "0.15.1", features = [ "stm32h750v", "rt", "revision_v", "usb_hs", "xspi", "gpio-h747" ] }
sh1106 = "0.5.0"
