[package]
name = "hello-daisy"
authors = ["Komplementariteten <47053492+Komplementariteten@users.norepley.github.com>"]
edition = "2018"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]


[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = ["device"] }
daisy_bsp = { version = "0.5.1", features = ["seed"]  }
embedded-graphics = "0.8.0"
embedded-graphics-core = { version = "0.4.0", optional = true }
stm32h7xx-hal = { version = "0.15.1", features = [ "stm32h750v", "rt", "revision_v", "usb_hs", "xspi", "gpio-h747" ] }
sh1106 = "0.5.0"
cfg-if = "1.0.0"
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
log = "0.4.20"
rtt-target = "0.4.0"


[features]
default = ["rt", "log-rtt"]
rt = ["stm32h7xx-hal/rt"]
log-rtt = []

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
lto = true # better optimizations
opt-level = "s" # optimize for binary size